# ffmpeg-builds

./: CMakeLists.txt  Makefile  README.md
patches/: patch-manager.sh
patches/ffmpeg/: 0001-avcodec-h264-sei.patch
unix/: CMakeLists.txt
